Fixing dev buddies section on mobile

--- a/index.css
+++ b/index.css
@@ -84,8 +84,8 @@ h1 {
 
 .image-container img {
     max-width: 100%;
-	transition: transform 0.2s;
 	border-radius: 5px;
+	transition: transform 0.2s;
 	@media (pointer: fine) {
 		height: 225px;
 		width: auto;
@@ -96,17 +96,14 @@ h1 {
 	}
 }
 
-@media (pointer: fine) {
-	.image-container img:not(.videoThumb):hover {
+.image-container img:not(.videoThumb):hover {
+	@media (pointer: fine) {
 		transform: scale(1.03);
 	}
-}
-@media (pointer: coarse) {
-	.image-container img:not(.videoThumb):hover {
+	@media (pointer: coarse) {
 		transform: scale(0.72);
 	}
 }
-
 
 .playIcon {
 	position: absolute;
@@ -117,7 +114,7 @@ h1 {
 	@media (pointer: coarse) {
 		transform: scale(0.7);
 		left: 15%;
-		bottom: -35%;
+		vertical-align:middle;
 	}
 	
 }
@@ -197,17 +194,24 @@ p {
 }
 
 .buddiesPP {
-	margin: 10px;
 	text-align: center;
+	
+	@media (pointer: fine) {
+    	margin: 10px;
+  	}
+	@media (pointer: coarse) {
+    	margin: 30px;
+		min-width: 200px;
+  	}
 }
 
 .buddiesPP img {
 	border-radius: 50%;
+	transition: transform 0.2s;
 }
 
 .buddiesPP img:hover {
     transform: scale(1.03);
-	transition: transform 0.2s;
 }
 
 .alignedBlocksContainer {
